22-07-2022 PSS  issue #221 Currently if you use the shortcut "Shift" + "Alt" + "#" all checkboxes are set regardless if a proper translation is present 22-07-2022 PSS issue #222 Currently a shortcut is used to tick the checkboxes, it would be nice if you get a warning and can set the tick boxes by bulk save 22-07-2022 PSS issue #223 When setting checkboxes, lines that do not have a translation are also set 22-07-2022 PSS issue #224 When using Deepl in formal mode, the translation is not always formal 22-0702922 PSS issue #225 Currently when using formal, the translation is still default 22-07-2022 PSS issue #226 If you are a PTE/GTE, and select the bulksave button it does not set the tickboxes

--- a/src/wptf-style.css
+++ b/src/wptf-style.css
@@ -210,6 +210,13 @@ local.paging a.local-trans-button {
         margin: 5px !important;
  }
 
+.paging a.bulksave-button {
+    background: blue;
+    color: white !important;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 
 .panel-header-actions .translation-filler-button {
     width: auto;
